Fix spacing before headings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,7 +433,7 @@ h6 {
 	clear: both;
 	line-height: 1.4;
 	margin: 0 0 0.75em;
-	padding: 1.5em 0 0;
+	padding: 0.5em 0 0;
 }
 
 h1:first-child,
